Added jest test runner and supertest library to backend project
Created tests for the api
